# KaLLia

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml  todo.md
api/: Dockerfile  config.toml  pyproject.toml
api/src/: agent.py  config.py  logger.py  schema.py
src/: agent.py  config.py  logger.py  routes.py  tools.py
telegram/: Dockerfile  bot.py  pyproject.toml
