[project]
name = "kallia-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.11",
    "ddgs>=9.14.4",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "tavily-python>=0.7.25",
    "toml>=0.10.2",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
